--- a/appAutomation-framework/pom.xml
+++ b/appAutomation-framework/pom.xml
@@ -12,6 +12,18 @@
     <groupId>code2Automate</groupId>
     <artifactId>appAutomation-framework</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>7</source>
+                    <target>7</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
     <dependencies>
         <!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-server -->
