--- a/appAutomation-framework/pom.xml
+++ b/appAutomation-framework/pom.xml
@@ -80,6 +80,12 @@
             <version>${selenide.version}</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.8</version>
+            <scope>provided</scope>
+        </dependency>
 
 
     </dependencies>
